--- a/src/global.css
+++ b/src/global.css
@@ -1,4 +1,5 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inter:ital,wght@0,400;0,600;1,300&display=swap");
 body {
   margin: 0;
   line-height: normal;
@@ -6,10 +7,94 @@ body {
 :root {
   /* fonts */
   --m3-label-large: Roboto;
+  --single-line-body-base: Inter;
 
   /* font sizes */
   --m3-label-large-size: 14px;
+  --font-size-2xs: 11px;
+  --font-size-19xl: 38px;
+  --single-line-body-base-size: 16px;
+  --heading-size: 24px;
+  --font-size-3xl: 22px;
 
   /* Colors */
   --schemes-on-primary: #fff;
+  --color-black: #000;
+  --schemes-outline-variant: #cac4d0;
+  --schemes-surface-container-high: #ece6f0;
+  --schemes-on-surface-variant: #49454f;
+  --text-neutral-default: #303030;
+  --text-default-secondary: #757575;
+  --background-brand-default: #2c2c2c;
+  --text-default-default: #1e1e1e;
+  --border-default-default: #d9d9d9;
+  --text-default-tertiary: #b3b3b3;
+  --text-brand-on-brand: #f5f5f5;
+
+  /* Spacing */
+  --space-200: 8px;
+  --space-300: 12px;
+  --radius-200: 8px;
+  --space-600: 24px;
+  --icon-large: 40px;
+  --radius-full: 9999px;
+  --space-100: 4px;
+  --space-400: 16px;
+  --scale-06: 32px;
+
+  /* Gaps */
+  --gap-sm: 14px;
+  --gap-xl: 20px;
+  --gap-5xl: 24px;
+  --gap-9xs: 4px;
+  --gap-6xs: 7px;
+  --gap-10xl: 29px;
+  --gap-5xs: 8px;
+  --gap-12xs: 1px;
+  --gap-xs: 12px;
+  --gap-11xs: 2px;
+  --gap-base: 16px;
+  --gap-mid: 17px;
+  --gap-mini-2: 14.2px;
+  --gap-7xs: 6px;
+  --gap-smi: 13px;
+
+  /* Paddings */
+  --padding-xl: 20px;
+  --padding-2xl: 21px;
+  --padding-lg: 18px;
+  --padding-7xs: 6px;
+  --padding-smi: 13px;
+  --padding-3xs: 10px;
+  --padding-xs: 12px;
+  --padding-8xs: 5px;
+  --padding-12xs: 1px;
+  --padding-base: 16px;
+  --padding-6xl: 25px;
+  --padding-19xl: 38px;
+  --padding-11xl: 30px;
+  --padding-9xs: 4px;
+  --padding-5xs: 8px;
+  --padding-mini: 15px;
+  --padding-6xs: 7px;
+  --padding-4xs: 9px;
+  --padding-sm: 14px;
+  --padding-10xs: 3px;
+  --padding-4xl: 23px;
+  --padding-10xl: 29px;
+  --padding-3xl: 22px;
+  --padding-5xl: 24px;
+  --padding-26xl: 45px;
+  --padding-7xl: 26px;
+  --padding-mid: 17px;
+  --padding-3xl-5: 22.5px;
+  --padding-22xl: 41px;
+
+  /* Border radiuses */
+  --br-81xl: 100px;
+  --br-6xl: 25px;
+  --br-9xl: 28px;
+  --br-5xs: 8px;
+  --br-9980xl: 9999px;
+  --br-13xl: 32px;
 }
