--- a/src/pages/MyntraRevibe.module.css
+++ b/src/pages/MyntraRevibe.module.css
@@ -12,7 +12,7 @@
   flex-direction: row;
   align-items: flex-start;
   justify-content: flex-start;
-  padding: 0 18px;
+  padding: 0 var(--padding-lg);
   box-sizing: border-box;
 }
 .labelText {
@@ -50,7 +50,7 @@
   padding: 0;
   background-color: rgba(240, 19, 87, 0.77);
   box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
-  border-radius: 100px;
+  border-radius: var(--br-81xl);
   flex-direction: row;
   align-items: flex-start;
 }
@@ -61,7 +61,7 @@
   background-color: var(--schemes-on-primary);
   flex-direction: column;
   align-items: center;
-  padding: 361px 20px 243px 21px;
+  padding: 361px var(--padding-xl) 243px var(--padding-2xl);
   box-sizing: border-box;
   gap: 61px;
   line-height: normal;
